ci: update GitHub Pages deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,16 @@ permissions:
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
@@ -27,6 +32,8 @@ jobs:
       
       - name: Build
         run: cd website && npm run build
+        env:
+          CI: false
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -39,9 +46,11 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
