--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -26,7 +28,11 @@ jobs:
         run: cd website && npm ci
 
       - name: Deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
-          cd website && npm run deploy
+          cd website
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/jonx0037/ds6371-unit3.git
+          npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
